--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Digite o COD de Usuario</h1>
     <div class="container">
       <input type="text" placeholder="Digite..." id="inputDeRedirecionamento">
-      <button id="redirecionar">Avançar</button>
+      <button id="redirecionar" type="submit">Avançar</button>
     </div>
   </main>
 </body>
