--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <main>
     <h1>Digite o COD de Usuario</h1>
     <div class="container">
-      <input type="text" placeholder="Digite..." id="inputDeRedirecionamento">
-      <button id="redirecionar" type="submit">Avançar</button>
+      <input type="text" id="codigo" placeholder="Digite o código aqui" required>
+      <button id="redirecionar" onclick="redirecionar()">Avançar</button>
     </div>
   </main>
+
+  <script src="main.js"></script>
 </body>
 </html>
