--- a/restaurantes.html
+++ b/restaurantes.html
@@ -10,12 +10,14 @@
     <div class="container">
         <h1>Restaurantes</h1>
         <div class="restaurants">
-            <div class="restaurant-card">Restaurante 1</div>
-            <div class="restaurant-card">Restaurante 2</div>
-            <div class="restaurant-card">Restaurante 3</div>
-            <div class="restaurant-card">Restaurante 4</div>
-            <div class="restaurant-card">Restaurante 5</div>
-            <div class="restaurant-card">Restaurante 6</div>
+            <div class="restaurant-card"><a href="https://docs.google.com/spreadsheets/d/1FjrojtBZ1KgDvlgoXqj0srqzca_whMdWdkZoxvum_kI/edit?usp=sharing">Restaurante 1</a></div>
+            <div class="restaurant-card"><a href="">Restaurante 2</a></div>
+            <div class="restaurant-card"><a href="">Restaurante 3</a></div>
+            <div class="restaurant-card"><a href="">Restaurante 4</a></div>
+            <div class="restaurant-card"><a href="">Restaurante 5</a></div>
+            <div class="restaurant-card"><a href="">Restaurante 6</a></div>
+            <div class="restaurant-card"><a href="">Restaurante 7</a></div>
+            <div class="restaurant-card"><a href="">Restaurante 8</a></div>
         </div>
     </div>
 </body>
