--- a/restaurantes.html
+++ b/restaurantes.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Restaurantes</h1>
         <div class="restaurants">
-            <div class="restaurant-card"><a href="https://docs.google.com/spreadsheets/d/1FjrojtBZ1KgDvlgoXqj0srqzca_whMdWdkZoxvum_kI/edit?usp=sharing">Restaurante 1</a></div>
+            <div class="restaurant-card"><a href="https://docs.google.com/spreadsheets/d/1FjrojtBZ1KgDvlgoXqj0srqzca_whMdWdkZoxvum_kI/edit?usp=sharing">Restaurante 1 cod: mzx9059</a></div>
             <div class="restaurant-card"><a href="">Restaurante 2</a></div>
             <div class="restaurant-card"><a href="">Restaurante 3</a></div>
             <div class="restaurant-card"><a href="">Restaurante 4</a></div>
